fix text overflow in url for long links and make scrollbar easier to use

--- a/src/Redirect/redirect.css
+++ b/src/Redirect/redirect.css
@@ -43,9 +43,10 @@
 .url {
     overflow-x: auto;
     margin: 0;
-    height: 37px;
+    height: 40px;
     display: flex;
     align-items: center;
+    white-space: nowrap;
 }
 
 .url, .url-input {
